--- a/Metasprachen/.settings/org.eclipse.core.resources.prefs
+++ b/Metasprachen/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//WebContent/KN/Aufgabe16/A17/NewFile.html=UTF-8
 encoding//WebContent/TheCountAgain/Aufgabe\ 07/Aufgabenstellung\ 07.txt=UTF-8
